package creature;

final public class EvilLolo extends Creature {
    EvilLolo(int id) {
        setName("*.");
        setId(id);
    }
}
